# ChangeLog for dev-util/qt-creator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qt-creator-1.3.0_rc1 (21 Nov 2009)

  21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  -qt-creator-1.3.0_beta.ebuild, +qt-creator-1.3.0_rc1.ebuild, metadata.xml:
  Adding release candidate, removing beta

  02 Nov 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.3.0_beta.ebuild, -files/docs_gen.patch:
  Remove obsolete patch

  27 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-creator-9999.ebuild:
  Removing docs_gen.patch from the live ebuild - applied upstream

*qt-creator-1.3.0_beta (14 Oct 2009)

  14 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-creator-1.3.0_beta.ebuild:
  Bump to 1.3.0_beta release

  03 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-creator-1.2.90.ebuild:
  On tree

*qt-creator-1.2.90 (16 Sep 2009)

  16 Sep 2009; Dominik Kapusta <ayoy@gentoo.org> +qt-creator-1.2.90.ebuild,
  qt-creator-9999.ebuild, files/docs_gen.patch:
  Added 1.2.90 Technology Snapshot: new cvs plugin and French translation.
  Live ebuild dependent on Qt 4.6.

  01 Sep 2009; Dror Levin <spatz@psybear.com> files/docs_gen.patch:
  Update patch for docs generation following upstream code changes.

  30 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Fix binary installation

  29 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Backport fix from bug 275859

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Ebuild clean up and fixes

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Remove my broken sed

  28 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-creator-1.2.0.ebuild:
  On tree

  27 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Fix src_prepare

  27 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild, qt-creator-9999.ebuild, metadata.xml: