@@ -1,4 +1,4 @@
 EBUILD qt-creator-1.3.0_rc1.ebuild 2931 RMD160 8a5d39f6cc6b41105f2c603632921eeda3dad1ff SHA1 f5c8fb188c3c5091c3e0a2205ef4a42c545dc149 SHA256 0d8d799eaa15e03f4fdafea87c0c362b0303025a43f18263e244f78b2935a2d2
-EBUILD qt-creator-9999.ebuild 2827 RMD160 659ee50b45b616d0f197d468d01595dfc27d9806 SHA1 cecca48e44ab3329549974e2ae31d7e61288cc30 SHA256 29b6b5b6f648fbcdcb0dc3cb147316ee60c1dcff386346ab64beaee98ba71314
+EBUILD qt-creator-9999.ebuild 2888 RMD160 ef89567fb1628acdccef4a09fb673642eb3f574b SHA1 774d8b60537e93baa46e4e45189038c57aa47211 SHA256 897ea73a967c439ea663676a743175b503fc31771909aa17c1d035377d8b4260
 MISC ChangeLog 8844 RMD160 71e4f5a3baef4956715cf41b057eca67e559786b SHA1 522d352d9697d81dfddf4c345f1b35fee2e7182d SHA256 a83bcabb26a87e186260e23df00524092c3d1fa996480874aa958a05299ca610
 MISC metadata.xml 950 RMD160 136ec99e9aec67089e3829caa726b03d2834b154 SHA1 85223091cfbeb8aa99b0f37004a334d25c430d92 SHA256 106347aee363bb389a5a912a1b6180aeaddff31f0e80cf834cd41ba596571917
