@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org> qt-creator-9999.ebuild:
+  Applying rc1 changes to the live ebuild
+
 *qt-creator-1.3.0_rc1 (21 Nov 2009)
 
   21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
